<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.octri.common</groupId>
	<artifactId>common_lib</artifactId>
	<version>1.3.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>common_lib</name>
	<description>OCTRI Common Library</description>
	<url>https://source.ohsu.edu/OCTRI-Apps/common-lib</url>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<licenses>
		<license>
			<name>The 3-Clause BSD License</name>
			<url>https://opensource.org/license/bsd-3-clause</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>OCTRI Innovation Core</name>
			<email>octri-devops@ohsu.edu</email>
			<organization>Oregon Clinical &amp; Translational Research Institute (OCTRI)</organization>
			<organizationUrl>https://www.ohsu.edu/octri</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://source.ohsu.edu/OCTRI-Apps/common-lib.git</connection>
		<developerConnection>scm:git:https://source.ohsu.edu/OCTRI-Apps/common-lib.git</developerConnection>
		<url>https://source.ohsu.edu/OCTRI-Apps/common-lib/tree/main</url>
	</scm>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
